--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title></title>
     <script src="main.js"></script>
   </head>
   <body>
     <h1>Hello World!</h1>
-    <hr/>
+    <hr />
     <div id="display-element"></div>
     <button onclick="displayDate()">Click Me</button>
-    <hr/>
+    <hr />
+    <form id="add-element">
+     <input type="text">
+     <button>Add</button>
+    </fo>
   </body>
 </html>
